[package]
name = "llvm-pass-skeleton"
description = "A useless LLVM pass"
authors = ["Ethan Uppal"]
version = "0.1.0"
edition = "2024"

[lib]
name = "skeleton_pass"
crate-type = ["cdylib"]

[dependencies]
either = "1.5"                                               # for inkwell: https://github.com/TheDan64/inkwell/issues/580
llvm-plugin = { version = "0.6.0", features = ["llvm18-0"] }
